fix for Safari: position setting dialog behind when not visible

--- a/src/sass/app_2/_common/components/settings_dialog.scss
+++ b/src/sass/app_2/_common/components/settings_dialog.scss
@@ -12,11 +12,13 @@
     transition: opacity 0.3s ease, transform 0.3s ease;
     transform: none;
     opacity: 0;
+    z-index: -1;
 
     &.show {
         pointer-events: auto;
         opacity: 1;
         transform: translateY(-15%) scale(1, 1);
+        z-index: 1;
     }
     .settings-dialog-container {
         position: relative;
